[metadata]
name = NotesTree
version = 0.1.0
author = Aditya Shriwastava
author_email = adityashriwastava7@gmail.com
description = NotesTree is a command line tool for maintaining notes (Handwritten + Markdown) in a tree structure.
url = https://github.com/aditya-shriwastava/NotesTree
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
		PyYAML
		Send2Trash

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    notestree = notestree.notestree:main
